worker: Don't uninitialize pam before initialized if PostLogin fails

This commit cleans up a problem in an error path in open_session
(when PostLogin fails).  At that point PAM has not been initialized,
so we shouldn't uninitialize it.

https://bugzilla.gnome.org/show_bug.cgi?id=730572